src/test/run-pass/new-import-syntax.rs
use io::println;

fn main() {
    println("Hello world!");
}

