src/test/compile-fail/die-not-unique.rs
// error-pattern:mismatched types

fn main() {
    fail!("test");
}
